优化: 模块管理员初始化逻辑